# Tura_ContractDeploy

./: .env.example  DEPLOYMENT.md  DEPLOYMENT_RECORD.md  DEPLOYMENT_TEMPLATE.md  README.md  StrategyAgent.compiled.json  compile_contract.py  compile_contracts.py  deploy_contract.py  deploy_direct.py  deploy_native_factory.py  deploy_template.py  install_solc.py  pyproject.toml  register_native_agent.py  register_template.py  transfer_tura.py  verify_deployment.py  verify_native_registration.py  verify_template.py
contracts/: AIAgentNative.sol  AIAgentRegistryFactory.sol  AIAgentRegistryFactoryNative.sol
history/: AIAgent.sol  StrategyAgent.sol
