[tool.poetry]
name = "tura-agent-web3"
version = "0.1.0"
description = "TuraAgent Web3 Backend"
authors = ["TuraAgent Team"]

[tool.poetry.dependencies]
python = "^3.8"
web3 = "^7.0.0"
python-dotenv = "^1.0.0"
py-solc-x = "^2.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
